tests/vertical-slice/reject/move_into_enum_vec.hew
fn main() -> i64 {
    let values: Vec<string> = Vec::new();
    values.push("alpha");
    let _value = Some(values);
    values.len()
}
